--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "all-in-one",
+    "build": "NODE_ENV=production all-in-one",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
